<argLine> cleanups: (#11307)
1. Remove --illegal-access=deny since Java 17 is required
2. Remove unnecessary dropwizard-jackson argLine customization
3. Remove dropwizard-example and dropwizard-http2 <argLine> which is overriding the parent argLine which is likely unintentional